  
option java_package = "com.test.coprocessor";  
option java_outer_classname = "Sum";    
option java_generic_services = true;    
option optimize_for = SPEED;    
  
message SumRequest {  
        required string family = 1;     
        required string column = 2;     
}  
  
message SumResponse {  
        required int64 sum = 1 [default = 0];    
}  
  
service SumService {  
        rpc getSum(SumRequest)  
        returns (SumResponse);  
}
